--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-
+    id("org.jlleitschuh.gradle.ktlint") version "10.2.1"
 //    id 'kotlin-kapt'
 //    id 'dagger.hilt.android.plugin'
 }
